--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,3 +10,9 @@ peft:
   lora_r: 16
   lora_alpha: 32
   lora_dropout: 0.1
+
+data:
+  image_size: 224
+  batch_size: 32
+  num_workers: 4
+  num_labels: 14
